include haiti data event

--- a/notebooks/03-Image revelancy_using_EfficientNet.ipynb
+++ b/notebooks/03-Image revelancy_using_EfficientNet.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1373d9b8",
+   "metadata": {},
+   "source": [
+    "Binary classifier to identify if an image is relevant or not to natural disaster event such earthquake."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1e90349a",
