--- a/01-Demo - Training Damage Classifier.ipynb
+++ b/01-Demo - Training Damage Classifier.ipynb
@@ -61,6 +61,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training parameters are :\n",
+    "* `event` which natural disaster event. The events supported are the folders in `data/damage_csv`\n",
+    "* `model` which model such as : efficientnet or mobilenet\n",
+    "* `epochs` number epochs\n",
+    "* `lr` learning rate\n",
+    "* `batch`  batch size ,default is 32\n",
+    "* `frac` proportion of data to use between 0 and 1.\n",
+    "* `finentune`  to include finetuning after the training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
