update README and Demo app

--- a/02-Demo - Damage Classifier App.ipynb
+++ b/02-Demo - Damage Classifier App.ipynb
@@ -55,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run the Gradio classifier app"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -83,7 +90,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x24f8128da48>"
+       "<IPython.lib.display.IFrame at 0x231b1ad0448>"
       ]
      },
      "metadata": {},
@@ -91,21 +98,33 @@
     }
    ],
    "source": [
-    "model_name = 'cross_event_ecuador_efficientnet_1643984852.h5'\n",
-    "loaded_model = models.load_model(f\"{outpath}\\{model_name}\")\n",
-    "def _classifier(inp):\n",
-    "  img = np.asarray(tf.cast(inp, dtype=tf.float32)) * 1 / 255.0\n",
+    "model_name = 'cross_event_ecuador_haiti_efficientnet_fine_tuned_1644086357.h5'\n",
+    "loaded_model = models.load_model(os.path.join(outpath,model_name))\n",
+    "\n",
+    "def _classifier(input):\n",
+    "  img = np.asarray(tf.cast(input, dtype=tf.float32)) * 1 / 255.0\n",
     "  img = img.reshape((-1, IMG_SIZE, IMG_SIZE, 3))\n",
     "  preds = loaded_model.predict(img).flatten()\n",
     "  return {class_names[i]:float(preds[i]) for i in range(len(class_names))}\n",
     "\n",
     "iface = gr.Interface(fn=_classifier, \n",
+    "                    title=\"Disaster damage assessment from social media image\",\n",
+    "                      description=\"This simple app allow users to load an image and assess the extent of damage cause by an earthquake\",\n",
+    "                      article=\"The severity of damage in an image is the extent of physical destruction shown in it. For this experiment we only consider three level of damages :severe damage,mild damage and no damage (none)\",\n",
+    "                     \n",
     "                     inputs=gr.inputs.Image(shape=(IMG_SIZE, IMG_SIZE)),\n",
     "                     outputs=gr.outputs.Label()\n",
     "                     )\n",
     "\n",
     "iface.launch(debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
